--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,10 +7,9 @@ pool:
   vmImage: 'Ubuntu 16.04'
 
 steps:
-- script: npm test
-  displayName: 'test'
+- script: npm i
+  displayName: 'install dep'
 
 - script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+    npm test
+  displayName: 'Run test'
